[tool.poetry]
name = "pbt-demo"
version = "0.1.0"
description = ""
authors = ["Wit <wit.goszczynski@gmail.com>"]
packages = [
    { include = "pbt_demo", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {version = "^0.17.6", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
schemathesis = "^3.15.4"
tox = "^3.25.0"
pytest = "^7.1.2"

[tool.poetry.extras]
uvicorn = ["uvicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
