[tool.poetry]
name = "pbt-demo"
version = "0.1.0"
description = ""
authors = ["Wit <wit.goszczynski@gmail.com>"]
packages = [
    { include = "pbt_demo", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {version = "^0.17.6", optional = true}
fastapi = "^0.95.0"

[tool.poetry.extras]
uvicorn = ["uvicorn"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
tox = "^3.25.0"
pytest = "^7.1.2"
schemathesis = "^3.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
